--- a/SearchAED/app/build.gradle
+++ b/SearchAED/app/build.gradle
@@ -48,8 +48,8 @@ dependencies {
 //    implementation 'com.google.android.gms:play-services:7.5.0'
 
 
-
     implementation 'com.google.android.gms:play-services-plus:16.0.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.1.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
